test/invalid/qstring_nested_unfinished.d
//T error: qstring_nested_unfinished.d:4:16:
//T error: Unexpected end of file

string s = q{ { "foo } };
